--- a/index.html
+++ b/index.html
@@ -4,6 +4,88 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #e1e1e1;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: #333;
+    }
+    h1 {
+      color: #3e3e3e;
+      text-align: center;
+      margin-bottom: 20px;
+      margin-left: 0px;
+
+    }
+    #todoForm {
+      display: flex;
+      justify-content: space-between;
+      width: 350px;
+      border-radius: 30px;
+      overflow: hidden;
+    }
+    #todoInput {
+      padding: 15px;
+      margin-left: 20px;
+      font-size: 16px;
+      width: 80%;
+      border: none;
+      outline: none;
+      border-radius: 30px 0 0 30px;
+      box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    button {
+      padding: 15px;
+      margin-right: 15px;
+      font-size: 16px;
+      background-color: #7f8c8d;
+      color: white;
+      border: none;
+      border-radius: 0 30px 30px 0;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #95a5a6;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+      width: 350px;
+    }
+    li {
+      background-color: #fff;
+      padding: 15px;
+      margin-bottom: 12px;
+      border-radius: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease;
+    }
+    li:hover {
+      transform: scale(1.03);
+    }
+    li button {
+      background-color: #e74c3c;
+      color: white;
+      border-radius: 5px;
+      padding: 6px 12px;
+      cursor: pointer;
+      border: none;
+      transition: background-color 0.3s ease;
+    }
+    li button:hover {
+      background-color: #c0392b;
+    }
+  </style>
 </head>
 <body>
   <h1>Todo List</h1>
